2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.6.xml:
	  new plugins release

2004-11-04  Owen Fraser-Green  <owen@discobabe.net>

	* src/htdocs/bindings/bindings.xml: Updated gst-sharp info.

2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/releases/gst-ffmpeg/0.8.2.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/news/news.xml:
	  writing release notes for gst-ffmpeg 0.8.2.

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.7.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes for gstreamer 0.8.7

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.5.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  writing release notes for gst-plugins 0.8.5

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing gstreamer 0.8.6

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.6.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes

2004-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/data-get:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  releasing gst-plugins 0.8.4

2004-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix download location for yum

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  releasing

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  adding bugs

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>
